feat: Implement distributed rate limiting filter and token revocation mechanisms
- Added RateLimitingFilter to enforce rate limits on authentication endpoints using Redis.
- Introduced TokenRevocationLogoutHandler to revoke tokens upon user logout.
- Created TokenRevocationValidator to check for revoked tokens during authentication.
- Implemented GetActiveSessionsPort to retrieve active sessions for users.
- Developed RefreshTokenPort to handle refresh token logic, including validation and rotation.
- Added RevokeTokenPort to manage session revocation based on user actions.
- Created TokenIssuanceService for issuing JWT access tokens and opaque refresh tokens.
- Defined domain models for ActiveSession and AuthSession to track user sessions.
- Introduced exceptions for handling invalid and replayed refresh tokens.
- Created DTOs for token and session responses in REST API.
- Added database migrations for auth_sessions table and auto-audit exclusions.
- Implemented unit tests for TokenResponse DTO.